--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		<!-- Header --> 
 			<section id="header">
 				<div class="inner">
-					<h1><strong>AMIRA HISHAM DESOKEY</strong><br />
+					<h1><strong>AMIRA HISHAM </strong><br />
 					</h1>
 					<p>Healthcare Data Scientist/Healthcare Data Analyst <br />
 					Passinate about using data to improve patient outcomes</p>
@@ -489,4 +489,5 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			<script src="assets/js/main.js"></script>
 
 	</body>
+
 </html>
